--- a/dbConfig/Application.yaml
+++ b/dbConfig/Application.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: test-atlas
+  name: mysql-db
   namespace: argocd
 spec:
   destination:
     namespace: default
     server: 'https://kubernetes.default.svc'
   source:
-    path: ./
+    path: dbConfig
     repoURL: 'https://github.com/pratikjagrut/atlas-argocd-demo'
     targetRevision: HEAD
   project: default
