--- a/atlasConfig/atlas-cr.yaml
+++ b/atlasConfig/atlas-cr.yaml
@@ -3,13 +3,13 @@ kind: AtlasSchema
 metadata:
   name: myapp
 spec:
-  url: mysql://root:password@mysql:3306/example
+  url: mysql://root:pass@mysql:3306/example
   schema:
     sql: |
       create table users (
         id int not null auto_increment,
         name varchar(255) not null,
         email varchar(255) unique not null,
-        # short_bio varchar(255) not null,
+        short_bio varchar(255) not null,
         primary key (id)
       );
