--- a/argocd-apps/db.yaml
+++ b/argocd-apps/db.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "1"
+  # annotations:
+  #   argocd.argoproj.io/sync-wave: "1"
   name: mysql
   namespace: argocd
 spec:
