--- a/argocd-apps/nginx.yaml
+++ b/argocd-apps/nginx.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "3"
+  # annotations:
+  #   argocd.argoproj.io/sync-wave: "3"
   name: nginx
   namespace: argocd
 spec:
