--- a/dbConfig/db.yaml
+++ b/dbConfig/db.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   name: mysql
 spec:
   ports:
@@ -12,6 +14,8 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
   name: mysql
 spec:
   selector:
