--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
   name: nginx-deployment
 spec:
   selector:
