--- a/test/atlas-cr.yaml
+++ b/test/atlas-cr.yaml
@@ -5,7 +5,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "1"
   name: myapp
 spec:
-  url: mysql://root:password@mysql:3306/example
+  url: mysql://root:pass@mysql:3306/example
   schema:
     sql: |
       create table users (
